# ManiVault-Plugins-Olaf

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
DVRTransferFunctionPlugin/: CMakeLists.txt
DVRTransferFunctionPlugin/res/: TransferFunctionResources.qrc
DVRTransferFunctionPlugin/src/: DatasetsAction.cpp  DatasetsAction.h  GlobalAlphaAction.cpp  GlobalAlphaAction.h  GradientPickerAction.cpp  GradientPickerAction.h  InteractiveShape.cpp  InteractiveShape.h  MaterialColorPickerAction.cpp  MaterialColorPickerAction.h  MaterialSettings.cpp  MaterialSettings.h  MaterialTransitionsAction.cpp  MaterialTransitionsAction.h  PointAction.cpp  PointAction.h  SelectionAction.cpp  SelectionAction.h  SettingsAction.cpp  SettingsAction.h  TransferFunctionPlugin.cpp  TransferFunctionPlugin.h  TransferFunctionPlugin.json  TransferFunctionWidget.cpp  TransferFunctionWidget.h
DVRViewPlugin/: CMakeLists.txt
DVRViewPlugin/res/: ViewerResources.qrc
DVRViewPlugin/res/shaders/: 1DMip.frag  2DComposite.frag  AltNNMaterialTransition.frag  ColorComposite.frag  Directions.frag  FullDataCompositeBlending.frag  FullDataMaterialBlending.frag  FullDataSampling.comp  MaterialTransition2D.frag  NNMaterialTransition.frag  Surface.frag  Surface.vert
DVRViewPlugin/src/: DVRViewPlugin.cpp  DVRViewPlugin.h  DVRViewPlugin.json  DVRWidget.cpp  DVRWidget.h  GlobalSettingsAction.cpp  GlobalSettingsAction.h  MCArrays.h  SettingsAction.cpp  SettingsAction.h  TrackballCamera.cpp  TrackballCamera.h  VolumeRenderer.cpp  VolumeRenderer.h
DVRVolumeLoaderPlugin/: CMakeLists.txt
DVRVolumeLoaderPlugin/src/: DVRVolumeLoader.cpp  DVRVolumeLoader.h  DVRVolumeLoader.json
VolumeDataPlugin/: CMakeLists.txt  PluginInfo.json
VolumeDataPlugin/src/: InfoAction.cpp  InfoAction.h  Size3D.cpp  Size3D.h  Volume.cpp  Volume.h  VolumeData.cpp  VolumeData.h  VolumeData.json  Volumes.cpp  Volumes.h
